@@ -38,6 +38,7 @@ BUG_URL = "http://code.google.com/p/autokey/issues/entry"
 ICON_FILE = "autokey"
 ICON_FILE_NOTIFICATION = "autokey-status"
 ICON_FILE_NOTIFICATION_DARK = "autokey-status-dark"
+ICON_FILE_NOTIFICATION_ERROR = "autokey-status-error"
 
 # Misc
 DOMAIN_SOCKET_PATH = "/var/run/autokey-daemon"
